# Advanced-AI-Agent

./: .gitignore  pyproject.toml  test.py
data/: US_Stock_Market_DB_Schema.txt
data/chroma_db/: chroma.sqlite3
src/: TEST.py  database.py  ingest_schema.py  main.py  prompts.py
